Correct error in scrollbar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,22 +18,6 @@ body{
   line-height: 1.5;
 }
 
-/* h1, h2, h3, h4, h5, h6{
-  margin-top: 0;
-  margin-bottom: .5rem;
-  font-weight: 500;
-  line-height: 1.2;
-}
-
-h1{
-  font-size: 2.5rem;
-}
-
-h2{
-  font-size: 2rem;
-} */
-
-
 a{
   text-decoration: none;
 }
@@ -91,13 +75,6 @@ a.button{
   display: flex;
   flex-wrap: wrap;
 }
-
-/* .row{
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px;
-} */
 
 .fixed-top{
   position: fixed;
